# NSGA-II

./: .gitignore  README.MD  README:MD  api.py  dockerfile  main.py  pyproject.toml
data/: knowledge_base.csv
output_nsga2/: best_calendars.csv  evolution.csv  pareto_front.csv
src/algorithm/: nsga2.py  operators.py  pareto.py
src/domain/: constants.py  individual.py  objectives.py
src/knowledge/: loader.py
src/output/: exporter.py
src/utils/: metrics_lookup.py  repair.py
static/: index.html  script.js  styles.css
